--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,53 @@
 html {
     color: beige;
-    background: #2d2d2d;
+    background: rgb(43, 46, 54);
 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Fira Code';
 }
 
-h1 {
-    text-align: center;
+.header {
+    padding-left: 4%;
+}
+
+.headBtn {
+    color: beige;
+    font-size: 1.1rem;
+    font-weight: 200;
+    margin: 0 10px;
+    text-decoration: none;
+
+    transition: color 0.25s ease;
+}
+
+.headBtn:hover {
+    color: #666666;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    text-align: left;
+}
+
+.card {
+    background-color: rgb(59, 63, 73);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(59, 63, 73, 0.2);
+    color: beige;
+    margin: 0.5%;
+}
+
+.visits {
+    text-align: left;
+}
+
+.card h2 {
+    margin-top: 0;
+}
+
+.right-side {
+    align-self: right;
 }
