--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,31 @@
 html {
     color: beige;
+    height: 100%;
     background: rgb(43, 46, 54);
-
     font-family: 'Fira Code';
 }
 
+body {
+    margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:start;
+}
+
 .header {
-    padding-left: 4%;
+    padding: 10px 0px 3px 20px;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(59, 63, 73);
+    /* padding: 20px; */
+    border-radius: 10px;
+    /* box-shadow: 0 4px 8px rgba(59, 63, 73, 0.2); */
+    color: beige;
+    margin: 10px;
 }
 
 .headBtn {
@@ -23,31 +42,80 @@ html {
     color: #666666;
 }
 
-.container {
+.row {
+    margin: 10px;
+}
+
+#visits {
+    text-align: left;
+}
+
+#right-side {
+    align-self: right;
+}
+
+
+#container {
+    display: flex;
+    height: 80%;
+    max-height: 800px;
+}
+
+#blocks {
+    width: 70%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+#right-block {
+    width: 30%;
+    margin: 10px 0px;
+}
+
+#chart {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+#top-users {
+    background: rgba(0, 0, 0, 0.3);
+}
+
+#website-shout {
+    /* width: 90%; */
+}
+
+#pie-chart {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    text-align: left;
 }
 
-.card {
-    background-color: rgb(59, 63, 73);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(59, 63, 73, 0.2);
-    color: beige;
-    margin: 0.5%;
+#row-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 70%;
 }
 
-.visits {
-    text-align: left;
+#row-middle {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 60%;
+    padding: 0px 0px;
 }
 
-.card h2 {
-    margin-top: 0;
-}
-
-.right-side {
-    align-self: right;
+#row-bottem {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
