--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,18 @@ html {
     height: 100%;
     background: rgb(43, 46, 54);
     font-family: 'Fira Code';
+    
 }
 
 body {
-    margin: 0;
-    height: 100%;
+    height: 99%;
     display: flex;
     flex-direction: column;
     justify-content:start;
 }
 
 .header {
+    padding: 1rem 0 0.3rem 2rem;
     padding: 10px 0px 3px 20px;
 }
 
@@ -22,28 +23,29 @@ body {
     height: 100%;
     background-color: rgb(59, 63, 73);
     /* padding: 20px; */
-    border-radius: 10px;
-    /* box-shadow: 0 4px 8px rgba(59, 63, 73, 0.2); */
+    border-radius: 0.7rem;
+    box-shadow: 0 4px 8px rgba(26, 30, 41, 0.445);
     color: beige;
-    margin: 10px;
+    margin: 0.7rem;
 }
 
 .headBtn {
-    color: beige;
-    font-size: 1.1rem;
+    color: rgb(193, 207, 236);
+    font-size: 1.3rem;
     font-weight: 200;
-    margin: 0 10px;
+    margin: 0 1rem;
     text-decoration: none;
 
     transition: color 0.25s ease;
 }
 
 .headBtn:hover {
-    color: #666666;
+    color: #8694a7;
 }
 
 .row {
-    margin: 10px;
+    margin: 0.7rem;
+    margin-right: 1.25rem;
 }
 
 #visits {
@@ -57,12 +59,13 @@ body {
 
 #container {
     display: flex;
-    height: 80%;
-    max-height: 800px;
+    height: 90%;
+    max-height: 100%;
+    width: 100%;
 }
 
 #blocks {
-    width: 70%;
+    width: 115%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -72,11 +75,17 @@ body {
 
 #right-block {
     width: 30%;
-    margin: 10px 0px;
+    margin: 0.75rem 0px;
+    margin: 0 0 1.25rem -1.25rem;
+    border-radius: 0.7rem;
 }
 
 #chart {
     background: rgba(0, 0, 0, 0.5);
+    width: 70%;
+    height: 15%;
+    margin: 1.25rem 0 0 0;
+    
 }
 
 #top-users {
@@ -88,11 +97,14 @@ body {
 }
 
 #pie-chart {
-    margin: 0;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    height: 100%;
+    /* margin: 0 0 0 0; */
+    width: 92%;
 }
 
 #row-top {
@@ -100,7 +112,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 70%;
+    height: 30%;
 }
 
 #row-middle {
@@ -109,6 +121,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 60%;
+    padding: 0 0;
     padding: 0px 0px;
 }
 
@@ -118,4 +131,27 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+#visit-number {
+    margin: 0 0 1rem 1.25rem;
+    font-size: 2.5rem;
+}
+
+#visitors-button {
+    margin-left: 1.25rem;
+    color: rgb(193, 207, 236);
+    font-size: 1.1rem;
+    font-weight: 200;
+    text-decoration: none;
+    transition: color 0.25s ease;
+}
+
+#visitors-button:hover {
+    color: #8694a7;
+}
+
+.heading-text-card {
+    font-size: 1.1rem;
+    margin-left: 1.25rem;
 }
