--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
     color: beige;
     height: 100%;
-    background: rgb(43, 46, 54);
+    background: #2b2e36;
     font-family: 'Fira Code';
     
 }
@@ -30,7 +30,7 @@ body {
 }
 
 .headBtn {
-    color: rgb(193, 207, 236);
+    color: #c1cfec;
     font-size: 1.3rem;
     font-weight: 200;
     margin: 0 1rem;
@@ -80,12 +80,18 @@ body {
     border-radius: 0.7rem;
 }
 
-#chart {
-    background: rgba(0, 0, 0, 0.5);
-    width: 70%;
-    height: 15%;
+#canva {
+    background: rgba(0, 0, 0, 0);
+}
+
+#chart-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    aspect-ratio: 1/1;
     margin: 1.25rem 0 0 0;
-    
 }
 
 #top-users {
